--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <script src="./script.js"></script>
 </head>
 <body>
-<div class = "clock-input">
-    <h1>contagem</h1>
-    <div class = "header"></div>
-</div>
-<div class = "container" >
-    <div class = "clock-column">
-      <p class = "clock-day clock-timer"></p>
-      <p class = "clock-label"> Dias </p>
-    </div>
-    
-    <div class = "clock-column">
-        <p class = "clock-day clock-timer"></p>
-        <p class = "clock-label"> Horas </p>
+    <div class="clock-input">
+        <h1>Meu Aniversário</h1>
+        <div class="header"></div>
       </div>
-
-      <div class = "clock-column">
-        <p class = "clock-day clock-timer"></p>
-        <p class = "clock-label"> Minutos </p>
+      <div class="container">
+        <div class="clock-column">
+          <p class="clock-day clock-timer"></p>
+          <p class="clock-label">Dias</p>
+        </div>
+  
+        <div class="clock-column">
+          <p class="clock-hours clock-timer"></p>
+          <p class="clock-label">Horas</p>
+        </div>
+  
+        <div class="clock-column">
+          <p class="clock-minutes clock-timer"></p>
+          <p class="clock-label">Minutos</p>
+        </div>
+  
+        <div class="clock-column">
+          <p class="clock-seconds clock-timer"></p>
+          <p class="clock-label">Segundos</p>
+        </div>
       </div>
-
-      <div class = "clock-column">
-        <p class = "clock-day clock-timer"></p>
-        <p class = "clock-label"> Segundo </p>
-      </div>
-    </div>  
 </body>
 </html>
